# openenvdata_cleanning-

./: .env.example  .gitignore  CONTRIBUTING.md  CRITICAL_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CONFIG.md  Dockerfile  FINAL_PUSH.bat  FINAL_PUSH.ps1  LICENSE  README.md  README_CLEAN.md  README_GITHUB.md  SUBMISSION_FIX_SUMMARY.md  SUBMISSION_TROUBLESHOOT.txt  Spacefile  app.py  app_config.py  app_simple.py  config.py  debug_remove_duplicates.py  diagnostic_check.py  inference.py  openenv.py  openenv.yaml  push_fix.ps1  push_fix.sh  pyproject.toml  requirements.txt  requirements_hf.txt  run_all_tasks.py  test_duplicates.py  test_reset.py  test_tasks_endpoint.py  validator.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: validate.yml
env/: environment.py  graders.py  models.py  tasks.py
my_env/: QUICK_START.md  README.md  README_GITHUB.md  app.py  docker-compose.yml  frontend.html  inference.py  openenv.yaml
server/: __init__.py  app.py
