[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "A reinforcement learning environment for training agents to clean structured data through actions like fill_missing, normalize, and remove_duplicates."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hackathon Team", email = "team@example.com"}
]
keywords = ["data-cleaning", "reinforcement-learning", "openenv", "fastapi"]

dependencies = [
    "pydantic>=1.10.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.5",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "python-dotenv>=0.20.0",
    "PyYAML>=6.0",
    "openai>=1.0.0",
    "pytest>=7.0.0",
    "requests>=2.28.0",
    "openenv>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ProbalBoruah32/openenvdata_cleanning-"
Repository = "https://github.com/ProbalBoruah32/openenvdata_cleanning-.git"
Documentation = "https://github.com/ProbalBoruah32/openenvdata_cleanning-/blob/main/README.md"

[tool.setuptools]
packages = ["env"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
addopts = "-v"
